testdata/cases/analyze/invalid_utf8.expected
error[invalid-utf8]: argument is not a valid UTF-8 encoded string
  ┌─ testdata/cases/analyze/invalid_utf8.go:6:29
  │
6 │ 	return strings.Trim(value, "\xff")
  │ 	                           ^^^^^^

found 1 issue: 1 error
